--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -47,8 +47,10 @@ $card-border-radius: 2px
 @import about
 @import ../../../birds/static/stylesheets/birds
 @import ../../../birds/static/stylesheets/photochecklist
+@import ../../../creations/static/stylesheets/audio_with_download
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/radio
+@import ../../../creations/static/stylesheets/radio_podcast_links
 @import ../../../creations/static/stylesheets/research
 @import ../../../creations/static/stylesheets/soundrecording
 @import ../../../creations/static/stylesheets/speaking
