--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -9,37 +9,36 @@ $mobile-breakpoint: 500px
 
 #radio
   #links
+    display: flex
+    justify-content: space-between
+    align-items: center
     width: 100%
     float: left
     margin-bottom: $whitespace
     @include sans-font
     font-size: $base-font-size + 4
+    height: 44px
+
+    @media (max-width: $mobile-breakpoint)
+      height: 34px
 
     .radio-link
-      display: inline-block
+      display: flex
+      height: 100%
+      align-items: center
+      justify-content: center
+      margin-right: $whitespace / 2
+      line-height: 1
 
-      & + .radio-link
-        margin-left: $whitespace / 2
+      &:last-child
+        margin-right: 0
 
-    .external-links
-      position: relative
-      bottom: 5px
-      float: right
+    .radio-podcast-links
+      height: 100%
 
-      .radio-link
+      img
         width: auto
-        height: 40px
-
-        @media (max-width: $mobile-breakpoint)
-          height: 34px
-
-        img
-          height: 100%
-
-      @media (max-width: $mobile-breakpoint)
-        float: none
-        position: relative
-        top: 12px
+        height: 100%
 
   #year-program-container
     float: left
@@ -133,6 +132,9 @@ $mobile-breakpoint: 500px
             font-size: $base-font-size - 2
             color: $chickadee-dark-gray
 
+            p + p
+              margin-top: 12px
+
         .program-more
           @include clearfix
 
@@ -178,6 +180,13 @@ $mobile-breakpoint: 500px
       @include cleared-spans
       margin-bottom: $whitespace
 
+      .original-air-date
+        @include radio-detail-font
+        margin-top: 5px
+
+      p + p
+        margin-top: 15px
+
     #mp3-and-below
       float: left
       width: 100%
@@ -190,6 +199,9 @@ $mobile-breakpoint: 500px
 
     @include markdown-image-wrapper(500px)
 
+  .radio-podcast-links
+    float: left
+    width: 100%
 
 #radio,
 #radio-program
