update blog link (#51)

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -26,7 +26,7 @@
       Ways to Help
     </a>
 
-    <a href="http://blog.lauraerickson.com">
+    <a href="https://lauraerickson.substack.com">
       Blog</a>
 
     <a href="{{ radio_url }}"
