Change site title font to Amatic SC (#55)

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -13,15 +13,16 @@
         width: 100%
         float: left
         clear: both
-        font-family: 'adelaidaregular', sans-serif
-        font-size: 200px
+        font-family: 'Amatic SC', sans-serif
+        font-size: 100px
         color: $chickadee-white
         text-align: center
         line-height: 100%
+        padding-top: 10px
         padding-bottom: $whitespace
 
         @media (max-width: 1120px)
-          font-size: 18vw
+          font-size: 9vw
 
       .photo-checklist-family
         float: left
