--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -39,9 +39,9 @@
           float: left
           line-height: 70%
           margin-right: 10px
-          margin-bottom: 8px
-          font-family: 'adelaidaregular'
-          font-size: $base-font-size * 7
+          margin-bottom: 5px
+          font-family: 'Amatic SC', sans-serif
+          font-size: $base-font-size * 5
           color: rgba($chickadee-light-gray, 0.65)
 
 #way-to-help
