--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,14 +1,4 @@
-$font-root: "../fonts/adelaida/adelaida-regular-webfont"
-
-@font-face
-  font-family: 'adelaidaregular'
-  src: url('#{$font-root}.eot')
-  src: url('#{$font-root}.eot?#iefix') format('embedded-opentype'), url('#{$font-root}.woff2') format('woff2'), url('#{$font-root}.woff') format('woff'), url('#{$font-root}.ttf') format('truetype'), url('#{$font-root}.svg#adelaidaregular') format('svg')
-  font-weight: normal
-  font-style: normal
-
-
-@import url(https://fonts.googleapis.com/css?family=Dosis:200,500,600)
+@import url(https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Dosis:wght@200;500;600&display=swap)
 
 
 $base-font-size: 17px
@@ -53,7 +43,7 @@ h1, h2, h3, h4
 
 
 h1
-  font-family: 'adelaidaregular', sans-serif
+  font-family: 'Amatic SC', sans-serif
 
 
 h2, h3, h4, .markdown h1
