--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -8,7 +8,7 @@
 
 <div id="header">
   <a id="site-title" href="{{ home_url }}">
-    <h1>Laura Erickson's For the Birds</h1>
+    <h1>Laura Erickson’s For the Birds</h1>
   </a>
 
   <div id="menu">
