--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -4,7 +4,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url(https://fonts.googleapis.com/css?family=Dosis:200,500,600);
+@import url(https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Dosis:wght@200;500;600&display=swap);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -354,13 +354,6 @@ body:not(:-moz-handler-blocked) svg > * {
   animation-delay: 1.1s;
 }
 
-@font-face {
-  font-family: "adelaidaregular";
-  src: url("../fonts/adelaida/adelaida-regular-webfont.eot");
-  src: url("../fonts/adelaida/adelaida-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/adelaida/adelaida-regular-webfont.woff2") format("woff2"), url("../fonts/adelaida/adelaida-regular-webfont.woff") format("woff"), url("../fonts/adelaida/adelaida-regular-webfont.ttf") format("truetype"), url("../fonts/adelaida/adelaida-regular-webfont.svg#adelaidaregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
 body {
   font-family: Georgia, serif;
   font-size: 17px;
@@ -380,7 +373,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-family: "adelaidaregular", sans-serif;
+  font-family: "Amatic SC", sans-serif;
 }
 
 h2, h3, h4, .markdown h1 {
@@ -700,11 +693,10 @@ html, body {
 #header #site-title h1 {
   position: absolute;
   width: 100%;
-  top: -46%;
+  top: 0;
   left: 0;
   color: #deedf2;
-  font-size: 110px;
-  letter-spacing: 3px;
+  font-size: 75px;
 }
 @media (max-width: 950px) {
   #header #site-title {
@@ -712,8 +704,7 @@ html, body {
     padding-top: 11%;
   }
   #header #site-title h1 {
-    font-size: 12vw;
-    letter-spacing: 0.2vw;
+    font-size: 8vw;
   }
 }
 @media (max-width: 700px) {
@@ -722,8 +713,7 @@ html, body {
     padding-top: 12%;
   }
   #header #site-title h1 {
-    font-size: 14vw;
-    letter-spacing: 0.2vw;
+    font-size: 9vw;
   }
 }
 @media (max-width: 600px) {
@@ -731,7 +721,7 @@ html, body {
     margin-top: 10px;
   }
   #header #site-title h1 {
-    text-shadow: 0 0 1px #deedf2;
+    font-weight: bold;
   }
 }
 #header #menu {
@@ -1412,16 +1402,17 @@ html, body {
   width: 100%;
   float: left;
   clear: both;
-  font-family: "adelaidaregular", sans-serif;
-  font-size: 200px;
+  font-family: "Amatic SC", sans-serif;
+  font-size: 100px;
   color: #deedf2;
   text-align: center;
   line-height: 100%;
+  padding-top: 10px;
   padding-bottom: 36px;
 }
 @media (max-width: 1120px) {
   #photo-checklist #content #photo-checklist-full h2 {
-    font-size: 18vw;
+    font-size: 9vw;
   }
 }
 #photo-checklist #content #photo-checklist-full .photo-checklist-family {
@@ -2386,9 +2377,9 @@ html, body {
   float: left;
   line-height: 70%;
   margin-right: 10px;
-  margin-bottom: 8px;
-  font-family: "adelaidaregular";
-  font-size: 119px;
+  margin-bottom: 5px;
+  font-family: "Amatic SC", sans-serif;
+  font-size: 85px;
   color: rgba(207, 211, 207, 0.65);
 }
 
